# gamengine

./: .gitignore  Cargo.toml  README.md
assets/shaders/fragment/: basic.frag  textured.frag
assets/shaders/vertex/: basic.vert  textured.vert
src/: entity.rs  game.rs  graphics.rs  io.rs  main.rs  os.rs  state.rs
src/audio/: audio.rs
src/entity/: camera.rs  entity.rs  entityv2.rs  structures.rs
src/eventsource/: source.rs
src/game/: context.rs  game.rs  keyboard_handler.rs  level.rs  levelv2.rs  scene.rs  scene_creator.rs  window_handler.rs
src/graphics/: calculations.rs  object.rs  opengl.rs  opengl_util.rs  openglv2.rs
src/io/: files.rs  keyboard.rs  loader.rs  object.rs
src/os/: window_manager.rs
src/state/: context.rs  entity_context.rs
