[package]
name = "gamengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.0"
dashmap = "5.5.3"
gl = "0.14.0"
glsl = "7.0.0"
glfw = "0.54.0"
nalgebra = "0.32.3"
rodio = "0.17.3"
image = "0.24.9"
rand = "0.8.5"
